@@ -20,7 +20,7 @@ DEFAULT_FACE = FACE_RIGHT
 MOVE_FORCE = 300
 MOVE_DAMPING = 0.01
 
-SIGHT_DISTANCE = 1000
+SIGHT_DISTANCE = 1200
 GRID_SIZE = 64
 
 FADE_IN_MAX = 255
